// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statsOutput statsOutput/auxiliary-files-test should print correct stats for 1`] = `
"PublicPath: auto
asset bundle.js 2.3 KiB {909} [emitted] (name: main)
asset 2710c5e36f8babb0a3a4.png 7 bytes {909} [emitted] [immutable] [from: raw.png] (name: main)
Entrypoint main 2.3 KiB (7 bytes) = bundle.js 2.3 KiB (2710c5e36f8babb0a3a4.png 7 bytes)
chunk {909} (runtime: main) bundle.js (main) 7 bytes (asset) 159 bytes (javascript) 1.28 KiB (runtime) [entry] [rendered]
  > ./index main
  ./index.js + 1 modules [686] 117 bytes {909} [depth 0] [code generated]
    [no exports]
    [no exports used]
    entry ./index
    | ./index.js 75 bytes [depth 0] [orphan] [dependent] [built]
    |   [no exports]
    |   [no exports used]
    |   ModuleConcatenation bailout: Module is an entry point
    | ./raw.png [193] 7 bytes (asset) 42 bytes (javascript) {909} [depth 1] [built] [code generated]
    |   [no exports]
    |   [no exports used]
    |   esm import ./raw.png
  ./raw.png [193] 7 bytes (asset) 42 bytes (javascript) {909} [depth 1] [built] [code generated]
    [no exports]
    [no exports used]
    esm import ./raw.png
code generated modules 1.28 KiB (runtime) 159 bytes (javascript) 7 bytes (asset) [code generated]
  runtime modules 1.28 KiB
    webpack/runtime/global 223 bytes {909} [code generated]
      [no exports]
      [used exports unknown]
    webpack/runtime/auto_public_path 1.06 KiB {909} [code generated]
      [no exports]
      [used exports unknown]
  ./index.js + 1 modules [686] 117 bytes {909} [depth 0] [code generated]
    [no exports]
    [no exports used]
    entry ./index
    | ./index.js 75 bytes [depth 0] [orphan] [built]
    |   [no exports]
    |   [no exports used]
    |   ModuleConcatenation bailout: Module is an entry point
    | ./raw.png [193] 7 bytes (asset) 42 bytes (javascript) {909} [depth 1] [built] [code generated]
    |   [no exports]
    |   [no exports used]
    |   esm import ./raw.png
  ./raw.png [193] 7 bytes (asset) 42 bytes (javascript) {909} [depth 1] [built] [code generated]
    [no exports]
    [no exports used]
    esm import ./raw.png
orphan modules 76 bytes [orphan]
  ./index.js 75 bytes [depth 0] [orphan] [built]
    [no exports]
    [no exports used]
    ModuleConcatenation bailout: Module is an entry point
  ./stringModule.js 1 bytes [depth 1] [orphan] [built]
    [no exports]
    [module unused]
    ModuleConcatenation bailout: Module is not an ECMAScript module
    esm import ./stringModule [686]
  
Rspack compiled successfully (c12084bf03e12a353092)"
`;

exports[`statsOutput statsOutput/builtin-swc-loader-parse-error should print correct stats for 1`] = `
"ERROR in ./index.ts
  × Module build failed:
  ├─▶   ×
  │     │   x Expected '{', got 'error'
  │     │    ,-[Xdir/builtin-swc-loader-parse-error/index.ts:1:1]
  │     │  1 | export error;
  │     │    :        ^^^^^
  │     │    \`----
  │     │
  │   
  ╰─▶ Syntax Error

Rspack compiled with 1 error"
`;

exports[`statsOutput statsOutput/concatenated-modules should print correct stats for 1`] = `
"asset main.js 264 bytes [emitted] (name: main)
Entrypoint main 264 bytes = main.js
orphan modules 141 bytes [orphan] 4 modules
./index.js + 3 modules 141 bytes [code generated]
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/css-concat-error should print correct stats for 1`] = `
"asset main.js 49 bytes [emitted] (name: main)
Entrypoint main 49 bytes = main.js

ERROR in × Resolve error: Can't resolve './src' in 'Xdir/css-concat-error'

Rspack x.x.x compiled with 1 error in X s"
`;

exports[`statsOutput statsOutput/filename should print correct stats for 1`] = `
"asset 909.xxxx.js 8.81 KiB [emitted] (name: main)
asset 521.xxxx.js 337 bytes [emitted]
Entrypoint main 8.81 KiB = 909.xxxx.js
runtime modules 7.21 KiB 11 modules
cacheable modules 70 bytes
  ./index.js 38 bytes [built] [code generated]
  ./dynamic.js 32 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/hot+production should print correct stats for 1`] = `
"asset main.js 32.4 KiB [emitted] (name: main)
Entrypoint main 32.4 KiB = main.js
runtime modules 30.1 KiB 11 modules
./index.js 25 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/ignore-plugin should print correct stats for 1`] = `
"runtime modules 107 bytes 1 module
./index.js 103 bytes [built] [code generated]
Xdir/ignore-plugin/locals|sync|/^\\\\.\\\\/.*$/ 160 bytes [built] [code generated]
./locals/en.js 30 bytes [built] [code generated]"
`;

exports[`statsOutput statsOutput/ignore-warning should print correct stats for 1`] = `"Rspack compiled successfully"`;

exports[`statsOutput statsOutput/issue-3558 should print correct stats for 1`] = `"Rspack compiled successfully"`;

exports[`statsOutput statsOutput/legacy-ie-css-warning should print correct stats for 1`] = `"Rspack compiled successfully"`;

exports[`statsOutput statsOutput/let-keyword-as-variable-name-error should print correct stats for 1`] = `
"ERROR in ./index.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: \`let\` cannot be used as an identifier in strict mode
         ╭────
       1 │ let let = let;
         ·           ───
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

ERROR in ./index.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: \`let\` cannot be used as an identifier in strict mode
         ╭────
       1 │ let let = let;
         ·     ───
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 2 errors"
`;

exports[`statsOutput statsOutput/limit-chunk-count-plugin should print correct stats for 1`] = `
"1 chunks:
  asset bundle1.js 3.57 KiB [emitted] (name: main)
  Entrypoint main 3.57 KiB = bundle1.js
  chunk (runtime: main) bundle1.js (main) 219 bytes (javascript) 1.84 KiB (runtime) <{909}> >{909}< [entry] [rendered]
    dependent modules 96 bytes [dependent] 4 modules
    ./index.js 123 bytes [built] [code generated]
  1 chunks (Rspack x.x.x) compiled successfully in X s

2 chunks:
  asset bundle2.js 10.2 KiB [emitted] (name: main)
  asset 76.bundle2.js 497 bytes [emitted] (name: c)
  Entrypoint main 10.2 KiB = bundle2.js
  chunk (runtime: main) 76.bundle2.js (c) 74 bytes <{76}> <{909}> >{76}< [rendered]
    dependent modules 44 bytes [dependent] 2 modules
    ./c.js 30 bytes [built] [code generated]
  chunk (runtime: main) bundle2.js (main) 145 bytes (javascript) 8.4 KiB (runtime) >{76}< [entry] [rendered]
    dependent modules 22 bytes [dependent] 1 module
    ./index.js 123 bytes [built] [code generated]
  2 chunks (Rspack x.x.x) compiled successfully in X s

3 chunks:
  asset bundle3.js 10.2 KiB [emitted] (name: main)
  asset 76.bundle3.js 387 bytes [emitted] (name: c)
  asset 345.bundle3.js 186 bytes [emitted]
  Entrypoint main 10.2 KiB = bundle3.js
  chunk (runtime: main) 345.bundle3.js 44 bytes <{76}> [rendered]
    ./d.js 22 bytes [built] [code generated]
    ./e.js 22 bytes [built] [code generated]
  chunk (runtime: main) 76.bundle3.js (c) 30 bytes <{909}> >{345}< [rendered]
    ./c.js 30 bytes [built] [code generated]
  chunk (runtime: main) bundle3.js (main) 145 bytes (javascript) 8.4 KiB (runtime) >{76}< [entry] [rendered]
    dependent modules 22 bytes [dependent] 1 module
    ./index.js 123 bytes [built] [code generated]
  3 chunks (Rspack x.x.x) compiled successfully in X s

4 chunks:
  asset bundle4.js 10.2 KiB [emitted] (name: main)
  asset 76.bundle4.js 387 bytes [emitted] (name: c)
  asset 697.bundle4.js 130 bytes [emitted]
  asset 753.bundle4.js 130 bytes [emitted]
  Entrypoint main 10.2 KiB = bundle4.js
  chunk (runtime: main) 697.bundle4.js 22 bytes <{76}> [rendered]
    ./e.js 22 bytes [built] [code generated]
  chunk (runtime: main) 753.bundle4.js 22 bytes <{76}> [rendered]
    ./d.js 22 bytes [built] [code generated]
  chunk (runtime: main) 76.bundle4.js (c) 30 bytes <{909}> >{697}< >{753}< [rendered]
    ./c.js 30 bytes [built] [code generated]
  chunk (runtime: main) bundle4.js (main) 145 bytes (javascript) 8.4 KiB (runtime) >{76}< [entry] [rendered]
    dependent modules 22 bytes [dependent] 1 module
    ./index.js 123 bytes [built] [code generated]
  4 chunks (Rspack x.x.x) compiled successfully in X s"
`;

exports[`statsOutput statsOutput/logging-loader should print correct stats for 1`] = `
"DEBUG LOG from TestLoader|Xdir/logging-loader/index.js
<-> group
  <i> info something
      log something
    -------
"
`;

exports[`statsOutput statsOutput/minify-error should print correct stats for 1`] = `
"ERROR in × JavaScript parsing error: Expected a semicolon
   ╭─[1:1]
 1 │ const a {}
   ·         ─
 2 │ (() => { // webpackBootstrap
 3 │ var __webpack_exports__ = {};
   ╰────

Rspack compiled with 1 error"
`;

exports[`statsOutput statsOutput/named-chunk-group should print correct stats for 1`] = `
"Entrypoint main 8.8 KiB = main.js
Chunk Group cimanyd 337 bytes = cimanyd.js"
`;

exports[`statsOutput statsOutput/nonexistent-import-source-error should print correct stats for 1`] = `
"ERROR in ./index.js
  × Resolve error: Can't resolve 'not-exist' in 'Xdir/nonexistent-import-source-error'
   ╭────
 1 │ import \\"not-exist\\";
   ·        ───────────
   ╰────

Rspack compiled with 1 error"
`;

exports[`statsOutput statsOutput/optimization-chunk-ids-natural should print correct stats for 1`] = `
"Entrypoint e1 10.4 KiB = e1.js
Entrypoint e2 10.3 KiB = e2.js
chunk (runtime: e1) 0.js 24 bytes [rendered]
chunk (runtime: e1) 1.js 52 bytes [rendered]
chunk (runtime: e1, e2) 2.js 22 bytes [rendered]
chunk (runtime: e1) e1.js (e1) 74 bytes (javascript) 8.39 KiB (runtime) [entry] [rendered]
chunk (runtime: e2) e2.js (e2) 51 bytes (javascript) 8.39 KiB (runtime) [entry] [rendered]"
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk should print correct stats for 1`] = `
"Entrypoint e1 4.07 KiB = e1~runtime.js 3.68 KiB e1.js 391 bytes
Entrypoint e2 4.07 KiB = e2~runtime.js 3.68 KiB e2.js 391 bytes
chunk (runtime: e1~runtime) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: e1~runtime) e1~runtime.js (e1~runtime) 2.58 KiB [initial] [rendered]
chunk (runtime: e2~runtime) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: e2~runtime) e2~runtime.js (e2~runtime) 2.58 KiB [initial] [rendered]"
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-multiple should print correct stats for 1`] = `
"Entrypoint e1 4.07 KiB = runtime~e1.js 3.68 KiB e1.js 391 bytes
Entrypoint e2 4.07 KiB = runtime~e2.js 3.68 KiB e2.js 391 bytes
chunk (runtime: runtime~e1) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e2) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e1) runtime~e1.js (runtime~e1) 2.58 KiB [initial] [rendered]
chunk (runtime: runtime~e2) runtime~e2.js (runtime~e2) 2.58 KiB [initial] [rendered]"
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-single should print correct stats for 1`] = `
"Entrypoint e1 4.06 KiB = runtime.js 3.68 KiB e1.js 391 bytes
Entrypoint e2 4.06 KiB = runtime.js 3.68 KiB e2.js 391 bytes
chunk (runtime: runtime) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: runtime) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: runtime) runtime.js (runtime) 2.58 KiB [initial] [rendered]"
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-true should print correct stats for 1`] = `
"Entrypoint e1 4.07 KiB = runtime~e1.js 3.68 KiB e1.js 391 bytes
Entrypoint e2 4.07 KiB = runtime~e2.js 3.68 KiB e2.js 391 bytes
chunk (runtime: runtime~e1) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e2) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e1) runtime~e1.js (runtime~e1) 2.58 KiB [initial] [rendered]
chunk (runtime: runtime~e2) runtime~e2.js (runtime~e2) 2.58 KiB [initial] [rendered]"
`;

exports[`statsOutput statsOutput/parse-error should print correct stats for 1`] = `
"ERROR in ./b.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected ';', '}' or <eof>
         ╭─[4:1]
       4 │ includes
       5 │ a
       6 │ parser )
         ·        ─
       7 │ error
       8 │ in
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 1 error"
`;

exports[`statsOutput statsOutput/performance-disabled should print correct stats for 1`] = `
"asset main.js 303 KiB [emitted] (name: main)
asset 697.js 130 bytes [emitted]
asset 753.js 130 bytes [emitted]
Entrypoint main 303 KiB = main.js
runtime modules 8.39 KiB 12 modules
cacheable modules 293 KiB
  ./index.js 49 bytes [built] [code generated]
  ./a.js 293 KiB [built] [code generated]
  ./b.js 22 bytes [built] [code generated]
  ./c.js 28 bytes [built] [code generated]
  ./d.js 22 bytes [built] [code generated]
  ./e.js 22 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/performance-error should print correct stats for 1`] = `
"asset main.js 303 KiB [emitted] (name: main)
asset 697.js 130 bytes [emitted]
asset 753.js 130 bytes [emitted]
Entrypoint main 303 KiB = main.js
runtime modules 8.39 KiB 12 modules
cacheable modules 293 KiB
  ./index.js 48 bytes [built] [code generated]
  ./a.js 293 KiB [built] [code generated]
  ./b.js 22 bytes [built] [code generated]
  ./c.js 28 bytes [built] [code generated]
  ./d.js 22 bytes [built] [code generated]
  ./e.js 22 bytes [built] [code generated]

ERROR in × asset size limit: The following asset(s) exceed the recommended size limit (244.141 KiB). This can impact web performance.Assets:
  │   main.js (303.392 KiB)


ERROR in × entrypoint size limit: The following entrypoint(s) combined asset size exceeds the recommended limit (244.141 KiB). This can impact web performance.Entrypoints:
  │   main (303.392 KiB)
  │       main.js


Rspack x.x.x compiled with 2 errors in X s"
`;

exports[`statsOutput statsOutput/performance-no-hints should print correct stats for 1`] = `
"asset main.js 303 KiB [emitted] (name: main)
asset 697.js 130 bytes [emitted]
asset 753.js 130 bytes [emitted]
Entrypoint main 303 KiB = main.js
runtime modules 8.39 KiB 12 modules
cacheable modules 293 KiB
  ./index.js 48 bytes [built] [code generated]
  ./a.js 293 KiB [built] [code generated]
  ./b.js 22 bytes [built] [code generated]
  ./c.js 28 bytes [built] [code generated]
  ./d.js 22 bytes [built] [code generated]
  ./e.js 22 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/prefetch-preload-mixed should print correct stats for 1`] = `
"chunk (runtime: main) a1.js (a1) 1 bytes <{74}> [rendered]
chunk (runtime: main) c2.js (c2) 1 bytes <{76}> [rendered]
chunk (runtime: main) c1.js (c1) 1 bytes <{76}> [rendered]
chunk (runtime: main) b3.js (b3) 1 bytes <{751}> [rendered]
chunk (runtime: main) b2.js (b2) 1 bytes <{751}> [rendered]
chunk (runtime: main) a.js (a) 136 bytes <{909}> >{330}< >{740}< (prefetch: {330} {740}) [rendered]
chunk (runtime: main) a2.js (a2) 1 bytes <{74}> [rendered]
chunk (runtime: main) b.js (b) 203 bytes <{909}> >{438}< >{439}< >{826}< (prefetch: {826} {438}) (preload: {439}) [rendered]
chunk (runtime: main) c.js (c) 134 bytes <{909}> >{380}< >{433}< (preload: {433} {380}) [rendered]
chunk (runtime: main) b1.js (b1) 1 bytes <{751}> [rendered]
chunk (runtime: main) main.js (main) 195 bytes (javascript) 11.6 KiB (runtime) >{74}< >{751}< >{76}< (prefetch: {74} {751} {76}) [entry] [rendered]"
`;

exports[`statsOutput statsOutput/reasons should print correct stats for 1`] = `
"./index.js 44 bytes [built] [code generated]
  entry ./index
./a.js 55 bytes [built] [code generated]
  cjs self exports reference self
  cjs require ./a"
`;

exports[`statsOutput statsOutput/resolve-overflow-error should print correct stats for 1`] = `
"asset main.js 378 bytes [emitted] (name: main)
Entrypoint main 378 bytes = main.js
./index.js 51 bytes [built] [code generated] [1 error]

ERROR in ./index.js
  × Resolve error: Can't resolve 'cycle-alias/a' in 'Xdir/resolve-overflow-error'
   ╭─[1:1]
 1 │ import { a } from \\"cycle-alias/a\\";
   ·                   ───────────────
 2 │ console.log(a);
   ╰────
  help: maybe it had cyclic aliases

Rspack x.x.x compiled with 1 error in X s"
`;

exports[`statsOutput statsOutput/resolve-unexpected-exports-in-pkg-error should print correct stats for 1`] = `
"asset bundle.js 1.38 KiB [emitted] (name: main)
Entrypoint main 1.38 KiB = bundle.js
runtime modules 280 bytes 1 module
./index.js 39 bytes [built] [code generated] [1 error]

ERROR in ./index.js
  × Invalid \\"exports\\" target \\"../../index.js\\" defined for '.' in the package config Xdir/resolve-unexpected-exports-in-pkg-error/node_modules/pkg-a/package.json

Rspack x.x.x compiled with 1 error in X s"
`;

exports[`statsOutput statsOutput/runtime-modules should print correct stats for 1`] = `
"webpack/runtime/has_own_property 107 bytes [code generated]
webpack/runtime/make_namespace_object 280 bytes [code generated]
webpack/runtime/define_property_getters 290 bytes [code generated]
./index.js 19 bytes [built] [code generated]"
`;

exports[`statsOutput statsOutput/runtime-specific-exports should print correct stats for 1`] = `
"asset main.js 1.67 KiB [emitted] (name: main)
Entrypoint main 1.67 KiB = main.js
./example.js 70 bytes [built] [code generated]
  [no exports]
  [no exports used]
./increment.js 251 bytes [built] [code generated]
  [exports: decrement, increment, incrementBy2]
  [only some exports used: increment]
./math.js 313 bytes [built] [code generated]
  [exports: add, multiply]
  [only some exports used: add]
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/side-effects-bailouts should print correct stats for 1`] = `
"asset main.js 207 bytes {909} [emitted] (name: main)
Entrypoint main 207 bytes = main.js
chunk {909} (runtime: main) main.js (main) 91 bytes [entry] [rendered]
orphan modules 91 bytes [orphan] 2 modules
./index.js + 1 modules [911] 91 bytes {909} [code generated]
  [no exports]
  [no exports used]
  entry ./index.js
  
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/simple-export should print correct stats for 1`] = `
"asset bundle.js 1.71 KiB [emitted] (name: main)
Entrypoint main 1.71 KiB = bundle.js
runtime modules 677 bytes 3 modules
./index.js 26 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/simple-module-source should print correct stats for 1`] = `
"asset bundle.js 2.1 KiB [emitted] (name: main)
Entrypoint main 2.1 KiB = bundle.js
runtime modules 706 bytes 3 modules
orphan modules 1 bytes [orphan] 1 module
cacheable modules 82 bytes
  ./index.js 75 bytes [built] [code generated]
  ./raw.png 7 bytes [built] [code generated]
Rspack compiled successfully"
`;

exports[`statsOutput statsOutput/stats-hooks should print correct stats for 1`] = `
"asset main.js 99 bytes [emitted111] (name: main) [testA: aaaaaa]
Entrypoint main 99 bytes = main.js
./index.js 26 bytes [built] [code generated]
Rspack compiled successfully"
`;

exports[`statsOutput statsOutput/try-require-module should print correct stats for 1`] = `
"WARNING in ./index.js
  ⚠ Resolve error: Can't resolve './missing-module' in 'Xdir/try-require-module'
   ╭─[1:1]
 1 │ try {
 2 │     require('./missing-module')
   ·     ───────────────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning"
`;

exports[`statsOutput statsOutput/try-require-resolve-module should print correct stats for 1`] = `
"WARNING in ./index.js
  ⚠ Resolve error: Can't resolve './missing-module' in 'Xdir/try-require-resolve-module'
   ╭─[1:1]
 1 │ try {
 2 │     require.resolve('./missing-module')
   ·     ───────────────────────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning"
`;

exports[`statsOutput statsOutput/try-require-resolve-weak-module should print correct stats for 1`] = `
"WARNING in ./index.js
  ⚠ Resolve error: Can't resolve './missing-module' in 'Xdir/try-require-resolve-weak-module'
   ╭─[1:1]
 1 │ try {
 2 │     require.resolveWeak('./missing-module')
   ·     ───────────────────────────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning"
`;
